TGR-1244: more cleanup